--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint": "^7.27.0",
+    "eslint-plugin-react": "^7.24.0",
     "vite": "^2.3.5"
   }
 }
