--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
+    "prop-types": "^15.7.2",
     "vite": "^2.3.5"
   }
 }
