--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
     "prop-types": "^15.7.2",
+    "sass": "^1.34.1",
     "vite": "^2.3.5"
   }
 }
