--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "history": "^4.10.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.7.1",
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
