--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.1",
     "history": "^4.10.1",
     "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.7.1",
