--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.2",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
